--- a/index.html
+++ b/index.html
@@ -3,71 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Conway's Game of Life - A cellular automaton simulation">
     <title>Game of Life</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/@heroicons/v2/24/outline/esm/index.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-black min-h-screen flex items-center justify-center p-4">
-    <div class="flex items-start gap-8">
+    <main class="flex items-start gap-8">
         <!-- Left Panel -->
-        <div class="w-80 text-white space-y-6">
-            <div class="space-y-4">
-                <h2 class="text-2xl font-bold">Game of Life</h2>
+        <aside class="w-80 text-white space-y-6">
+            <header class="space-y-4">
+                <h1 class="text-2xl font-bold">Game of Life</h1>
                 <p class="text-gray-300">A cellular automaton devised by mathematician John Conway in 1970. The game follows simple rules to simulate the evolution of a grid of cells, where each cell can be either alive or dead.</p>
-            </div>
+            </header>
 
-            <!-- Rules Accordion -->
-            <div class="border border-gray-700 rounded-lg overflow-hidden">
-                <button class="accordion-header w-full px-4 py-3 flex justify-between items-center bg-gray-800 hover:bg-gray-700 transition-colors" onclick="toggleAccordion('rules')">
-                    <h3 class="text-xl font-bold">Rules</h3>
-                    <svg id="rules-icon" class="w-6 h-6 transform transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-                    </svg>
-                </button>
-                <div id="rules-content" class="accordion-content">
+            <!-- Rules Section -->
+            <section class="border border-gray-700 rounded-lg overflow-hidden">
+                <details class="group">
+                    <summary class="w-full px-4 py-3 flex justify-between items-center bg-gray-800 hover:bg-gray-700 transition-colors cursor-pointer list-none">
+                        <h2 class="text-xl font-bold">Rules</h2>
+                        <svg class="w-6 h-6 transform transition-transform group-open:rotate-180" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                        </svg>
+                    </summary>
                     <div class="px-4 py-3 space-y-2 text-gray-300">
-                        <p>1. Any live cell with fewer than two live neighbors dies (underpopulation)</p>
-                        <p>2. Any live cell with two or three live neighbors lives on to the next generation</p>
-                        <p>3. Any live cell with more than three live neighbors dies (overpopulation)</p>
-                        <p>4. Any dead cell with exactly three live neighbors becomes a live cell (reproduction)</p>
+                        <ol class="list-decimal list-inside space-y-2">
+                            <li>Any live cell with fewer than two live neighbors dies (underpopulation)</li>
+                            <li>Any live cell with two or three live neighbors lives on to the next generation</li>
+                            <li>Any live cell with more than three live neighbors dies (overpopulation)</li>
+                            <li>Any dead cell with exactly three live neighbors becomes a live cell (reproduction)</li>
+                        </ol>
                     </div>
-                </div>
-            </div>
+                </details>
+            </section>
 
-            <!-- Instructions Accordion -->
-            <div class="border border-gray-700 rounded-lg overflow-hidden">
-                <button class="accordion-header w-full px-4 py-3 flex justify-between items-center bg-gray-800 hover:bg-gray-700 transition-colors" onclick="toggleAccordion('instructions')">
-                    <h3 class="text-xl font-bold">Instructions</h3>
-                    <svg id="instructions-icon" class="w-6 h-6 transform transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-                    </svg>
-                </button>
-                <div id="instructions-content" class="accordion-content">
+            <!-- Instructions Section -->
+            <section class="border border-gray-700 rounded-lg overflow-hidden">
+                <details class="group">
+                    <summary class="w-full px-4 py-3 flex justify-between items-center bg-gray-800 hover:bg-gray-700 transition-colors cursor-pointer list-none">
+                        <h2 class="text-xl font-bold">Instructions</h2>
+                        <svg class="w-6 h-6 transform transition-transform group-open:rotate-180" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                        </svg>
+                    </summary>
                     <div class="px-4 py-3 space-y-2 text-gray-300">
-                        <p>1. Click on cells to toggle them alive/dead</p>
-                        <p>2. Use Start/Stop to control the simulation</p>
-                        <p>3. Adjust speed with the slider</p>
-                        <p>4. Save interesting patterns</p>
-                        <p>5. Use step buttons to move frame by frame</p>
+                        <ol class="list-decimal list-inside space-y-2">
+                            <li>Click on cells to toggle them alive/dead</li>
+                            <li>Use Start/Stop to control the simulation</li>
+                            <li>Adjust speed with the slider</li>
+                            <li>Save interesting patterns</li>
+                            <li>Use step buttons to move frame by frame</li>
+                        </ol>
                     </div>
-                </div>
-            </div>
-        </div>
+                </details>
+            </section>
+        </aside>
 
         <!-- Main Game Area -->
-        <div class="flex items-center gap-8">
-            <canvas id="gameCanvas" class="border border-gray-700"></canvas>
-            <div class="flex flex-col gap-4">
+        <section class="flex items-center gap-8">
+            <figure>
+                <canvas id="gameCanvas" class="border border-gray-700" aria-label="Game of Life grid"></canvas>
+            </figure>
+            <nav class="flex flex-col gap-4">
                 <div class="flex gap-2">
-                    <button id="stepBackButton" class="p-2 bg-gray-700 text-white rounded hover:bg-gray-600 transition-colors">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <button id="stepBackButton" class="p-2 bg-gray-700 text-white rounded hover:bg-gray-600 transition-colors" aria-label="Step back">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6" aria-hidden="true">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5L8.25 12l7.5-7.5" />
                         </svg>
                     </button>
                     <button id="startButton" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition-colors">Start</button>
-                    <button id="stepForwardButton" class="p-2 bg-gray-700 text-white rounded hover:bg-gray-600 transition-colors">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                    <button id="stepForwardButton" class="p-2 bg-gray-700 text-white rounded hover:bg-gray-600 transition-colors" aria-label="Step forward">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6" aria-hidden="true">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
                         </svg>
                     </button>
@@ -76,81 +83,15 @@
                 <button id="saveButton" class="px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600 transition-colors">Save State</button>
                 
                 <div class="mt-4">
+                    <label for="speedSlider" class="text-white">Speed</label>
                     <div class="flex items-center gap-4">
-                        <label for="speedSlider" class="text-white">Speed</label>
-                        <input type="range" id="speedSlider" min="50" max="500" value="100" class="flex-1">
+                        <input type="range" id="speedSlider" min="50" max="500" value="100" class="flex-1" aria-label="Simulation speed">
                         <span id="speedValue" class="text-white w-16 text-right">100ms</span>
                     </div>
                 </div>
-
-                <div class="mt-4">
-                    <h3 class="text-white mb-2">Saved States</h3>
-                    <ul id="savedStatesList" class="text-white space-y-2">
-                        <!-- Saved states will be added here dynamically -->
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <!-- Right Pane: Patterns Tabs -->
-        <div class="w-80 bg-gray-900 rounded-lg shadow-lg p-4 text-white flex flex-col gap-4">
-            <div class="border-b border-gray-700 mb-4 flex">
-                <button id="tab-stills" class="px-4 py-2 focus:outline-none font-semibold text-blue-400 border-b-2 border-blue-400" onclick="showPatternTab('stills')">Stills</button>
-                <button id="tab-oscillators" class="px-4 py-2 focus:outline-none font-semibold text-gray-300 hover:text-blue-400" onclick="showPatternTab('oscillators')">Oscillators</button>
-                <button id="tab-spaceships" class="px-4 py-2 focus:outline-none font-semibold text-gray-300 hover:text-blue-400" onclick="showPatternTab('spaceships')">Spaceships</button>
-            </div>
-            <div id="patterns-stills" class="pattern-tab">
-                <label for="stills-combo" class="block mb-2">Still lifes</label>
-                <select id="stills-combo" class="w-full p-2 rounded bg-gray-800 border border-gray-700">
-                    <option>Block</option>
-                    <option>Bee-hive</option>
-                    <option>Loaf</option>
-                    <option>Boat</option>
-                    <option>Tub</option>
-                </select>
-            </div>
-            <div id="patterns-oscillators" class="pattern-tab hidden">
-                <label for="oscillators-combo" class="block mb-2">Oscillators</label>
-                <select id="oscillators-combo" class="w-full p-2 rounded bg-gray-800 border border-gray-700">
-                    <option>Blinker (period 2)</option>
-                    <option>Toad (period 2)</option>
-                    <option>Beacon (period 2)</option>
-                    <option>Pulsar (period 3)</option>
-                    <option>Penta-decathlon (period 15)</option>
-                </select>
-            </div>
-            <div id="patterns-spaceships" class="pattern-tab hidden">
-                <label for="spaceships-combo" class="block mb-2">Spaceships</label>
-                <select id="spaceships-combo" class="w-full p-2 rounded bg-gray-800 border border-gray-700">
-                    <option>Glider</option>
-                    <option>Light-weight spaceship (LWSS)</option>
-                    <option>Middle-weight spaceship (MWSS)</option>
-                    <option>Heavy-weight spaceship (HWSS)</option>
-                </select>
-            </div>
-        </div>
-    </div>
-    <script>
-        function toggleAccordion(id) {
-            const content = document.getElementById(`${id}-content`);
-            const icon = document.getElementById(`${id}-icon`);
-            content.classList.toggle('open');
-            icon.classList.toggle('rotate-180');
-        }
-        function showPatternTab(tab) {
-            document.getElementById('tab-stills').classList.remove('text-blue-400', 'border-blue-400');
-            document.getElementById('tab-oscillators').classList.remove('text-blue-400', 'border-blue-400');
-            document.getElementById('tab-spaceships').classList.remove('text-blue-400', 'border-blue-400');
-            document.getElementById('tab-stills').classList.add('text-gray-300');
-            document.getElementById('tab-oscillators').classList.add('text-gray-300');
-            document.getElementById('tab-spaceships').classList.add('text-gray-300');
-            document.getElementById(`tab-${tab}`).classList.add('text-blue-400', 'border-blue-400');
-            document.getElementById(`tab-${tab}`).classList.remove('text-gray-300');
-            document.getElementById('patterns-stills').classList.add('hidden');
-            document.getElementById('patterns-oscillators').classList.add('hidden');
-            document.getElementById('patterns-spaceships').classList.add('hidden');
-            document.getElementById(`patterns-${tab}`).classList.remove('hidden');
-        }
-    </script>
+            </nav>
+        </section>
+    </main>
     <script src="index.js"></script>
 </body>
 </html> 
